// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

import "expr/src/scalar.proto";

package mz_storage.client.transforms;

message ProtoLinearOperator {
    repeated mz_expr.scalar.ProtoMirScalarExpr predicates = 1;
    repeated uint64 projection = 2;
}
